--- a/Dockerfile-alpine.template
+++ b/Dockerfile-alpine.template
@@ -1,5 +1,8 @@
 RUN apk add --no-cache \
       wget \
+      libtool \
+      libc-dev \
+      linux-headers \
       # Dependenies for third-party Python packages
       # with C-extensions
       build-base \
