--- a/versions/3.6/alpine/Dockerfile
+++ b/versions/3.6/alpine/Dockerfile
@@ -18,7 +18,7 @@ ENV USER=100 \
 
 USER 0
 
-RUN apk --no-cache add bash rsync && \
+RUN apk --no-cache add bash rsync curl && \
     ln -sf /bin/bash /bin/sh && \
     mkdir -p $HOME && \
     adduser -S -u 1001 -G root -h $HOME -s /sbin/nologin \
